# expected

./: .clang-format  CMakeLists.txt  README.md  main.cpp
Public/Expected/: BadExpectedAccess.hpp  Expected.hpp  Tags.hpp  Unexpected.hpp
Public/Expected/Details/: BaseCopy.hpp  BaseCopyAssign.hpp  BaseDestructor.hpp  BaseExpected.hpp  BaseExpectedStorage.hpp  BaseMove.hpp  BaseMoveAssign.hpp  ExpectedStorage.hpp  ExpectedTraits.hpp  ExpectedUnion.hpp  Traits.hpp  UnexpectedTraits.hpp
test/: CMakeLists.txt  Expected.cpp
tests/: CMakeLists.txt  Expected.cpp  Unexpected.cpp  Utility.hpp  expected.cpp  unexpected.cpp
